--- a/README.rdoc
+++ b/README.rdoc
@@ -1,6 +1,10 @@
 = madad
 
-Description goes here.
+This gem loads the value of the {Madad}[http://he.wikipedia.org/wiki/%D7%9E%D7%93%D7%93_%D7%94%D7%9E%D7%97%D7%99%D7%A8%D7%99%D7%9D_%D7%9C%D7%A6%D7%A8%D7%9B%D7%9F]
+from http://www.cbs.gov.il/reader/pirsum_madad/indices_eng.xml
+
+== Usage
+
 
 == Contributing to madad
  
