--- a/README.rdoc
+++ b/README.rdoc
@@ -5,6 +5,10 @@ from http://www.cbs.gov.il/reader/pirsum_madad/indices_eng.xml
 
 == Usage
 
+<code><pre>
+require 'madad'
+value = Madad.latest_value
+</pre></code>
 
 == Contributing to madad
  
