--- a/README.rdoc
+++ b/README.rdoc
@@ -5,10 +5,10 @@ from http://www.cbs.gov.il/reader/pirsum_madad/indices_eng.xml
 
 == Usage
 
-<code><pre>
+<pre><code>
 require 'madad'
 value = Madad.latest_value
-</pre></code>
+<code></pre>
 
 == Contributing to madad
  
